# LRSplines

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.py
LRSplines/: __init__.py  aux_split_functions.py  b_spline.py  element.py  lr_spline.py  meshline.py  statistics.py  visualization_utils.py
doc/: Makefile
doc/source/: basic_usage.rst  bspline.rst  conf.py  index.rst  meshline.rst
doc/source/api/: bspline.rst  element.rst  lrspline.rst  meshline.rst
docs/: make.bat
docs/source/: api_reference.rst  basic_usage.rst  bspline.rst  conf.py  element.rst
examples/: plot_LR.py  plot_edge_functions.py  plot_hierarchichal_mesh.py  plot_overloading.py  plot_refinement.py  plot_tensor_product_partition_of_unity.py  readme.py  test.py  test_init.py  transform_mesh.py
profiling/: evaluation.py
src/: LRBSpline.py  aux_split_functions.py  b_spline.py  element.py  lr_b_spline.py  lr_spline.py  mesh.py  meshline.py
tests/: test_aux_split_methods.py  test_b_spline.py  test_element.py  test_lr_spline.py  test_lr_spline_numerics.py  test_meshline.py
